--- a/index.html
+++ b/index.html
@@ -5,27 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <title>PlaneTTechJS Hello World</title>
-    <script src="./coi-serviceworker.js"></script>
-    <script type="importmap">
-        {
-          "imports": {
-            "three": "https://unpkg.com/three@0.162/build/three.module.js", 
-            "three/addons/": "https://unpkg.com/three@0.162/examples/jsm/",
-            "three/nodes": "https://unpkg.com/three@0.162/examples/jsm/nodes/Nodes.js",
-            "planettech": "https://unpkg.com/planettech"
-          }
-        }
-      </script>     
+    <title>PlaneTTechJS Hello World</title>    
 </head>
 
 <body>
   <script>
-    if (crossOriginIsolated){
-      console.log(`[crossOriginIsolated]: is ${crossOriginIsolated} SharedArrayBuffer is avalable`) 
-    }else{
-      console.log(`[crossOriginIsolated]: is ${crossOriginIsolated} SharedArrayBuffer isn't avalable`) 
-    }
+console.log('hello world')
   </script>
 </body>
 
