trying to get pages working add test index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <title>PlaneTTechJS Hello World</title>    
+    <title>PlaneTTechJS Hello World</title>
+    <script type="importmap">
+        {
+          "imports": {
+            "three": "https://unpkg.com/three@0.162/build/three.module.js", 
+            "three/addons/": "https://unpkg.com/three@0.162/examples/jsm/",
+            "three/nodes": "https://unpkg.com/three@0.162/examples/jsm/nodes/Nodes.js",
+            "planettech": "https://unpkg.com/planettech"
+          }
+        }
+      </script>      
 </head>
 
 <body>
