trying example dir again

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,17 +16,17 @@
             "planettech": "https://unpkg.com/planettech"
           }
         }
-      </script>     
+      </script>      
 </head>
 
 <body>
-  <script>
-    if (crossOriginIsolated){
-      console.log(`[crossOriginIsolated]: is ${crossOriginIsolated} SharedArrayBuffer is avalable`) 
-    }else{
-      console.log(`[crossOriginIsolated]: is ${crossOriginIsolated} SharedArrayBuffer isn't avalable`) 
-    }
-  </script>
+    <script>
+        if (crossOriginIsolated){
+          console.log(`[crossOriginIsolated]: SharedArrayBuffer is avalable`) 
+        }else{
+          console.log(`[crossOriginIsolated]: SharedArrayBuffer isn't avalable`) 
+        }
+      </script>
 </body>
 
 </html>
