--- a/examples/index.html
+++ b/examples/index.html
@@ -27,6 +27,7 @@
           console.log(`[crossOriginIsolated]: SharedArrayBuffer isn't avalable`) 
         }
       </script>
+      <script src="./basic.js"></script>
 </body>
 
 </html>
