basic isnt working

--- a/examples/index.html
+++ b/examples/index.html
@@ -27,7 +27,7 @@
           console.log(`[crossOriginIsolated]: SharedArrayBuffer isn't avalable`) 
         }
       </script>
-      <script src="./basic.js"></script>
+      <script type="module" src="./basic.js"></script>
 </body>
 
 </html>
