--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <title>PlaneTTechJS Hello World</title>
+    <title>PlanetTechJS Hello-World</title>
     <script src="./coi-serviceworker.js"></script>
     <script type="importmap">
         {
@@ -13,7 +13,7 @@
             "three": "https://unpkg.com/three@0.162/build/three.module.js", 
             "three/addons/": "https://unpkg.com/three@0.162/examples/jsm/",
             "three/nodes": "https://unpkg.com/three@0.162/examples/jsm/nodes/Nodes.js",
-            "planettech": "https://unpkg.com/planettech"
+            "planettech": "https://unpkg.com/planettech@0.0.8-alpha.0.1.3"
           }
         }
       </script>      
