updating the read me

--- a/examples/index.html
+++ b/examples/index.html
@@ -20,6 +20,10 @@
 </head>
 
 <body>
+  <div style="position: absolute; z-index: 3; background-color:rgba(184, 117, 117, 0.5)">
+    <span style='font-size:100px;'>&#128679;</span>
+    <p>UNDER CONSTRUCTION!</p>
+  </div>
     <script>
         if (crossOriginIsolated){
           console.log(`[crossOriginIsolated]: SharedArrayBuffer is avalable`) 
