--- a/examples/index.html
+++ b/examples/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <div style="position: absolute; z-index: 3; background-color:rgba(184, 117, 117, 0.5)">
+  <div style="position: absolute; z-index: 3; background-color:rgba(184, 117, 117, 0.5); text-align:center;">
     <span style='font-size:100px;'>&#128679;</span>
     <p>UNDER CONSTRUCTION!</p>
   </div>
