update the name locally

--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <title>PlanetTechJS Hello-World</title>
+    <title>PlanetTech Hello-World</title>
     <script src="./coi-serviceworker.js"></script>
     <script type="importmap">
         {
